Created buttons and controller

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,7 +9,9 @@
         <script type="text/javascript" src="scripts/client.js"></script>
         <script type="text/javascript" src="scripts/controllers/info.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/login.controller.js"></script>
+        <script type="text/javascript" src="scripts/controllers/mock.controller.js"></script>
         <script type="text/javascript" src="scripts/controllers/user.controller.js"></script>
+        <script type="text/javascript" src="scripts/services/mock.service.js"></script>
         <script type="text/javascript" src="scripts/services/user.service.js"></script>
     </head>
 
