--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -3,6 +3,8 @@
     <ul>
       <li><a href="#/user">User Home</a></li>
       <li><a href="#/info">Info Page</a></li>
+      <li><a href="#/mock">Mock Data</a></li>
+    
     </ul>
   </div>
 </div>
