--- a/server/public/views/partials/header.html
+++ b/server/public/views/partials/header.html
@@ -1,5 +1,6 @@
 <div class="instructions">
     <div class="container">
-        <h1 class="lead">Solo Project</h1>
+        <img src="/images/butterfly.png" alt="butterfly-group-logo" class="butterfly-logo">
+        <h1 class="lead">Butterfly <span id="header-effect">Effect</span> Security</h1>
     </div>
 </div>
