--- a/server/public/views/templates/home.html
+++ b/server/public/views/templates/home.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" id="register-home">
   <h1 class="lead">Login</h1>
     <h1 class="lead alert alert-danger" role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
-    <form ng-submit="lc.login()">
+    <form class="reg-log-form" ng-submit="lc.login()">
       <div>
           <label for="username">Username:</label>
           <input type="text" ng-model="lc.user.username" />
@@ -11,8 +11,8 @@
           <input type="password" ng-model="lc.user.password" />
       </div>
       <div>
-          <input class="btn btn-default" type="submit" name="submit" value="Log In" />
-          <a href="#register">Register</a>
+          <input class="btn btn-default" type="submit" name="submit" value="Log In"/>
+          <a href="#register" id="register-cancel">Register</a>
       </div>
     </form>
 </div>
