--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" id="register-home">
   <h1 class="lead">Register User</h1>
   <h1 class="lead alert alert-danger" role="alert" ng-if="lc.message != ''">{{lc.message}}</h2>
-  <form ng-submit="lc.registerUser()">
+  <form class="reg-log-form" ng-submit="lc.registerUser()">
     <div>
         <label for="username">Username:</label>
         <input type="text" ng-model="lc.user.username" />
@@ -10,8 +10,9 @@
         <label for="password">Password:</label>
         <input type="password" ng-model="lc.user.password" />
     </div>
+    <div>
     <input class="btn btn-default" type="submit" name="submit" value="Register" />
-    <a href="#home">Cancel</a>
+    <a href="#home" id="register-cancel">Cancel</a>
+    </div>
   </form>
-
 </div>
