--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul>
       <li><a href="#/user">User Home</a></li>
-      <li><a href="#/info">Drone Dashboard</a></li>
+      <li><a href="#/info">Info Dashboard</a></li>
       <li><a href="#/mock">Mock Data</a></li>
     </ul>
   </div>
