--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Solo Project</title>
+        <title>BES</title>
         <link rel="stylesheet" href="styles/style.css">
 
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
