Created PUT route for alarm state

--- a/server/public/views/templates/mock.html
+++ b/server/public/views/templates/mock.html
@@ -13,7 +13,8 @@
     <input type="text" ng-model="sensorId">
     <button class="btn btn-default" ng-click="mc.openDoor(sensorId)">Open</button>
     <button class="btn btn-default" ng-click="mc.closeDoor(sensorId)">Close</button>
-
+    <br><br>
+    <button class="btn btn-default" ng-click="mc.toggleAlarm()">Toggle</button>
     <!-- <button class="btn btn-default" ng-click="mc.userService.open()">Open Door</button>
     <button class="btn btn-default" ng-click="mc.userService.close()">Closed Door</button>
     <button class="btn btn-default" ng-click="mc.userService.detected()">Motion Detected</button> -->
