--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title>BES</title>
+        <link rel="stylesheet" href="vendors/css/bootstrap.css">
         <link rel="stylesheet" href="styles/style.css">
-
+        <script type="text/javascript" src="vendors/socket.io.js"></script>
         <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
         <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
         <script type="text/javascript" src="scripts/client.js"></script>
