--- a/server/public/views/templates/info.html
+++ b/server/public/views/templates/info.html
@@ -1,32 +1,23 @@
 <div ng-include="'views/partials/nav.html'" ng-controller="InfoController as ic"></div>
 <div class="container">
-  <h1>
-    Information Dashboard
-  </h1>
-  <hr>
+
   <div ng-repeat="sensor in ic.sensorObject.data">
 
     <!-- you need to always end the type of sensor with "door" so data below makes sense-->
+    <h2>
+      {{sensor.name}} is <span ng-if="sensor.isOpen">OPEN</span>
+      <span ng-if="!sensor.isOpen">CLOSED</span>
+    </h2>
     <h4>
-      Sensor:
+      History:
     </h4>
-    <p>
-      {{sensor.name}}
-    </p>
-    <p>
-      Open: {{sensor.isOpen}}
-    </p>
-    <h4>
-      Sensor Instances:
-      </h5>
-      <div ng-repeat="h in sensor.history">
-
-        <p>
-          Sensor Status: {{h.status}}
-        </p>
-        <p>
-          Time: {{ h.time | date : "medium" }}
-        </p>
+      <div ng-repeat="h in sensor.history | orderBy:'-time' | limitTo:8">
+        <span>
+          <strong>Time:</strong> {{ h.time | date : "medium" }}
+        </span>
+        <span>
+          <strong>Sensor Status:</strong> {{h.status}}
+        </span>
       </div>
       <hr>
   </div>
