--- a/server/public/views/templates/mock.html
+++ b/server/public/views/templates/mock.html
@@ -1,8 +1,9 @@
+<div ng-include="'views/partials/nav.html'"></div>
 <div class="container">
 
     <input type="text" ng-model="sensorName">
     <button class="btn btn-default" ng-click="mc.addDoor(sensorName)">Add Sensor</button>
-    
+
     <div ng-repeat="sensor in mc.sensors">
         {{sensor.name}}: {{sensor._id}}
         <div ng-repeat="history in sensor.history">
